frontend/styles/mobile.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  line-height: 1.5;
}

body {
  background-color: #fafafa;
  font-size: 15px;
}

/* Level 1 */
nav {
  padding: 2rem;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  background-color: #f6f6f6;
}
nav > h1 {
  font-size: 1.5rem;
  color: #252b42;
}
/* Level 1.2 */
nav > div:nth-of-type(1) {
  margin-left: auto;
  margin-top: -0.5rem;
  display: flex;
  gap: 1rem;
}
nav > div > a {
  text-decoration: none;
  color: #737373;
  font-size: 2rem;
}
nav > div:nth-of-type(1) > a {
  height: 2rem;
}
nav > div:nth-of-type(1) > a > img {
  width: 2rem;
}
/* Level 1.3 */
nav > div:nth-of-type(2) {
  width: 100%;
  margin: 4.5rem 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 2rem;
}
/* Level 1.4 */
nav > div:nth-of-type(3) {
  display: none;
}

/* Level 2 */
header {
  padding: 5rem 2.5rem 12rem;
  display: flex;
  flex-direction: column;
  gap: 4rem;
  background-image: url(../images/hero.png);
  background-position: bottom;
  background-repeat: no-repeat;
  background-size: cover;
}
/* Level 2.1 */
header > article {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  color: #ffffff;
}
header > article > h2 {
  font-size: 2.4rem;
}
header > article > p {
  margin: 2.5rem 0;
  padding: 0 2rem;
  font-size: 1.25rem;
}
/* Level 2.1.3 */
header > article > div {
  margin-bottom: 1.5rem;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 1.5rem;
}
header > article > div > a {
  padding: 0.5rem 2rem;
  border-radius: 2rem;
  color: #ffffff;
  text-decoration: none;
  font-weight: 700;
}
header > article > div > a:first-of-type {
  background-color: #23a6f0;
}
header > article > div > a:last-of-type {
  border: 1px #ffffff solid;
}
/* Level 2.2 */
header > section {
  display: grid;
  grid-template-columns: 1fr;
  gap: 2rem;
}
/* Level 2.2.1 */
header > section > article {
  padding: 2rem 2.5rem;
  background-color: #ffffff;
}
header > section > article > img {
  width: 3rem;
}
header > section > article > h3 {
  margin-bottom: 0.5rem;
  font-size: 1.4rem;
}
header > section > article > p {
  font-size: 14px;
  color: #737373;
}
/* Level 2.2.3 */
header > section > article:last-child {
  background-color: #23a6f0;
  color: #ffffff;
}
header > section > article:last-child > p {
  color: #ffffff;
}

/* Level 3 */
header + section {
  padding: 6rem 2.5rem;
  display: grid;
  grid-template-columns: 1fr;
  gap: 6rem;
  background-color: #ffffff;
}
/* Level 3.1 */
header + section > article {
  width: 100%;
  padding: 0 2.5rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}
header + section > article > img {
  margin-bottom: 1rem;
  width: 5rem;
}
header + section > article > h3 {
  margin: 0.5rem 0;
  font-size: 1rem;
  color: #252b42;
}
header + section > article > p {
  color: #737373;
}

/* Level 4 */
/* Level 4.1 */
main > article {
  padding: 3rem 4rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}
main > article > h2 {
  font-size: 2.4rem;
  font-weight: 400;
}
main > article > p {
  margin-top: 0.5rem;
  padding: 0 1rem;
  color: #737373;
}
/* Level 4.1.3 */
main > article > section {
  width: 100%;
  margin-top: 3rem;
  display: grid;
  grid-template-columns: 1fr;
  gap: 2rem;
}
/* Level 4.1.3.1 */
main > article > section > div {
  padding: 2rem;
  display: flex;
  flex-direction: column;
  gap: 2rem;
  background-color: #ffffff;
  border: 1px #dedede solid;
  border-radius: 0.5rem;
  align-items: center;
  color: #737373;
}
main > article > section > div > img {
  width: 10rem;
}
/* Level 4.2 */
main > aside {
  display: flex;
  flex-direction: column;
  align-items: center;
}
/* Level 4.2.1 */
main > aside > section {
  margin: 5rem 0;
  display: flex;
  flex-direction: column;
  gap: 3.5rem;
}
main > aside > section > img {
  width: 9rem;
}
/* Level 4.2.2 */
main > aside > form {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  background-image: linear-gradient(to right, #004788, #d51489);
  text-align: center;
}
main > aside > form > h3 {
  margin: 2rem 0;
  padding: 0 2.5rem;
  font-size: 1.4rem;
  color: #ffffff;
}
main > aside > form > div > input {
  width: 100%;
  padding: 1rem;
  border: 0;
  border-top-left-radius: 0.3rem;
  border-bottom-left-radius: 0.3rem;
}
main > aside > form > div > button {
  padding: 1rem 1.5rem;
  background-color: #23a6f0;
  border: 1px solid white;
  border-top-right-radius: 0.3rem;
  border-bottom-right-radius: 0.3rem;
  color: #ffffff;
  text-decoration: none;
}
/* Level 4.3 */
main > article:nth-child(3) {
  padding: 2.5rem 2.5rem 6rem;
}
/* Level 4.3.3.1 */
main > article > section > article {
  padding: 3rem 2.5rem;
  display: flex;
  flex-direction: column;
  gap: 2rem;
  background-color: #ffffff;
  border: 1px solid #23a6f0;
}
main > article > section > article > h3 {
  font-size: 1.4rem;
  color: #252b42;
}
main > article > section > article > h4 {
  padding: 0 2rem;
  font-size: 1rem;
  color: #737373;
}
/* Level 4.3.3.1.3 */
main > article > section > article > div {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 0.5rem;
  text-align: left;
  font-weight: 700;
}
main > article > section > article > div > p:first-child {
  font-size: 2.5rem;
  color: #23a6f0;
}
main > article > section > article > div > p > small:first-child {
  font-size: 1.2rem;
  color: #23a6f0;
}
main > article > section > article > div > p > small:last-child {
  color: #004788;
}
/* Level 4.3.3.1.4 */
main > article > section > article > ul {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}
main > article > section > article > ul > li::before {
  width: 2.5rem;
  height: 2.5rem;
  content: url(../images/icons/checkmark-circle-green.svg);
  color: #ffffff;
}
main > article > section > article > ul > li {
  display: flex;
  align-items: center;
  gap: 0.5rem;
  text-align: left;
  list-style-type: none;
}
main > article > section > article > a {
  width: 100%;
  padding: 1rem 0;
  background-color: #23a6f0;
  border-radius: 0.2rem;
  color: #ffffff;
  text-decoration: none;
  font-weight: 700;
}
/* Level 4.3.3.2 */
main > article > section > article:nth-child(2) {
  background-color: #252b42;
  color: #ffffff;
}
main > article > section > article:nth-child(2) > h3 {
  color: #ffffff;
}
main > article > section > article:nth-child(2) > h4 {
  color: #ffffff;
}

/* Level 4.4 */
main > article:nth-child(4) {
  padding: 8rem 3rem;
  background-color: #252b42;
  text-align: left;
  color: #ffffff;
}
main > article > div {
}
main > article > div > h2 {
  font-size: 2.4em;
}
main > article > div > p {
  margin: 1.5rem 0;
}
main > article > img {
  width: 100%;
  margin-top: 8rem;
}

/* Level 4.5 */
main > form {
  display: flex;
  flex-wrap: wrap;
}
main > form > img {
  width: 100%;
}
main > form > div {
  width: 100%;
  padding: 3rem;
  display: flex;
  flex-direction: column;
  font-weight: 700;
}
main > form > div > h3 {
  margin-bottom: 3rem;
  font-size: 2.4rem;
  color: #252b42;
}
main > form > div > label {
  margin-bottom: 0.8rem;
  color: #252b42;
}
main > form > div > input {
  margin-bottom: 0.8rem;
  padding: 1em;
}
main > form > div > select {
  margin-bottom: 0.8rem;
  padding: 1em;
}
main > form > div > button {
  margin-top: 1.5rem;
  padding: 1rem;
  background-color: #23a6f0;
  border: 0;
  border-radius: 0.2rem;
  color: #ffffff;
  text-decoration: none;
  font-weight: 700;
}

/* Level 4.6 */
main > section {
  padding: 3rem 5rem;
  display: flex;
  flex-wrap: wrap;
  gap: 2rem;
  border-top: 0.4rem solid #252b42;
}
main > section > div {
}
main > section > div > h3 {
  margin-bottom: 0.5rem;
  font-size: 1.4rem;
  color: #252b42;
}
main > section > div > p {
  color: #737373;
}
main > section > a {
  padding: 1rem 2rem;
  background-color: #23a6f0;
  border: 0;
  border-radius: 0.2rem;
  color: #ffffff;
  text-decoration: none;
  font-weight: 700;
}

/* Level 5 */
footer {
}
/* Level 5.1 */
footer > div {
  padding: 3rem 5rem;
  display: flex;
  flex-wrap: wrap;
  gap: 1rem;
  background-color: #ffffff;
}
/* Level 5.1.1 */
footer > div > section {
  width: 100%;
  display: flex;
  flex-direction: column;
}
footer > div > section > h4 {
  margin-bottom: 1.5rem;
  font-size: 1rem;
  color: #252b42;
}
footer > div > section > a {
  margin-bottom: 0.8rem;
  text-decoration: none;
  color: #737373;
}
/* Level 5.1.5.2 */
footer > div > section > ul {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  color: #737373;
}
footer > div > section > ul > li {
  display: flex;
  align-items: center;
  gap: 0.5rem;
  text-align: left;
  list-style-type: none;
}
footer > div > section > ul > li:nth-child(1)::before {
  width: 1.5rem;
  height: 1.5rem;
  content: url(../images/icons/call-outline.svg);
}
footer > div > section > ul > li:nth-child(2)::before {
  width: 1.5rem;
  height: 1.5rem;
  content: url(../images/icons/location-outline.svg);
}
footer > div > section > ul > li:nth-child(3)::before {
  width: 1.5rem;
  height: 1.5rem;
  content: url(../images/icons/mail.svg);
}
/* Level 5.2 */
footer > div:nth-child(2) {
  padding: 2rem 5rem;
  background-color: initial;
  gap: 3rem;
}
/* Level 5.2.2 */
footer > div > div {
  display: flex;
  gap: 1rem;
}
footer > div > div > a > img {
  width: 2rem;
}

